# hanfe

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  go.mod  go.sum  toggle.ini
cmd/hanfe/: main.go
cmd/hanfe-autostart/: main.go
hanfe-tty/: main.go
hanfe-tty/internal/automata/: composer.go  composer_test.go  keymap.go  tables.go
include/hanfe/: cli.hpp  composer.hpp  config.hpp  device.hpp  emitter.h  emitter.hpp  engine.hpp  layout.hpp  util.hpp
internal/app/: layouts.go  modes.go  runtime.go  translation.go
internal/autostart/focus/: detect.go  detect_test.go
internal/backend/: database.go  editor.go  editor_test.go
internal/cli/: cli.go
internal/common/: common.go
internal/config/: config.go  config_test.go  profiles.go  profiles_test.go
internal/dbinput/: dbinput.go  dbinput_test.go
internal/device/: device.go
internal/emitter/: emitter.go  output.go  x11.go
internal/engine/: engine.go  engine_test.go
internal/hangul/: composer.go  composer_test.go
internal/layout/: custom.go  layout.go  layout_test.go
internal/linux/: constants.go  ioctl.go
internal/ttybridge/: bridge.go  detect.go  helper.go
internal/types/: mode.go
internal/util/: input.go
pkg/config/: config.go
pkg/ime/: composer.go  composer_test.go
src/: cli.cpp  composer.cpp  config.cpp  device.cpp  emitter.c  emitter.cpp  engine.cpp  layout.cpp  main.cpp  util.cpp
